responsive page for mobile phones

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button data-modal-open class="button" type="button">Zamów usługę</button>
       </div>
       <div class="container">
-        <ul class="list__icons--big">
+        <ul class="list__icons--big list__wrap">
           <li>
             <svg class="icon--big" width="270" height="120" viewBox="-100 -25 270 120 ">
               <use href="images/icons.svg#icon-antenna-1-1" width="70" height="70"></use>
@@ -102,7 +102,7 @@
           </li>
         </ul>
       </div>
-      <section class="container">
+      <section class="container container__desktop--visible">
         <h2 class="container__title">Czym się zajmujemy</h2>
         <ul>
           <li>
@@ -138,13 +138,12 @@
       <section class="background--light-gray">
         <div class="container">
           <h2 class="container__title title--padding-top">Nasz zespół</h2>
-          <ul>
+          <ul class="list__wrap">
             <li>
               <figure class="photo-card">
-                <img src="images/part2photo1.jpg" alt="The man with glasses" width="270" />
+                <img src="images/part2photo1.jpg" alt="The man with glasses" width="100%" />
                 <figcaption>
-                  <span><b>John Doe</b></span
-                  ><br />
+                  <span><b>John Doe</b></span>
                   <span class="photo-card__description">Product Designer</span>
                   <span class="photo-card__icons">
                     <a href="/"
@@ -206,10 +205,9 @@
 
             <li>
               <figure class="photo-card">
-                <img src="images/part2photo2.jpg" alt="Blonde woman with glasses" width="270" />
+                <img src="images/part2photo2.jpg" alt="Blonde woman with glasses" width="100%" />
                 <figcaption>
                   <span><b>John Doe</b></span>
-                  <br />
                   <span class="photo-card__description">Frontend Developer</span>
                   <span class="photo-card__icons">
                     <a href="/"
@@ -270,10 +268,9 @@
             </li>
             <li>
               <figure class="photo-card">
-                <img src="images/part2photo3.jpg" alt="The man in blue shirt" width="270" />
+                <img src="images/part2photo3.jpg" alt="The man in blue shirt" width="100%" />
                 <figcaption>
-                  <span><b>John Doe</b></span
-                  ><br />
+                  <span><b>John Doe</b></span>
                   <span class="photo-card__description">Marketing</span>
                   <span class="photo-card__icons">
                     <a href="/"
@@ -337,11 +334,10 @@
                 <img
                   src="images/part2photo4.jpg"
                   alt="The man with glasses in black t-shirt"
-                  width="270"
+                  width="100%"
                 />
                 <figcaption>
-                  <span><b>John Doe</b></span
-                  ><br />
+                  <span><b>John Doe</b></span>
                   <span class="photo-card__description">UI Designer</span>
                   <span class="photo-card__icons">
                     <a href="/"
@@ -405,7 +401,7 @@
       </section>
       <div class="container">
         <h2 class="container__title .title--padding-top">Nasi klienci</h2>
-        <ul>
+        <ul class="list__wrap">
           <li>
             <a href="/">
               <svg class="icon-company" width="170" height="92" viewBox="0 0 170 92">
