fix column in tablet version

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       </section>
       <div class="container">
         <h2 class="container__title .title--padding-top">Nasi klienci</h2>
-        <ul class="list__wrap">
+        <ul class="list__wrap list__companies">
           <li>
             <a href="/">
               <svg class="icon-company" width="170" height="92" viewBox="0 0 170 92">
