--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header>
-      <div class="container__header">
+      <div class="container container__header">
         <span class="logo"
           ><a href="index.html">Web<span class="logo__header--second-word">Studio</span></a></span
         >
@@ -34,21 +34,23 @@
             <li><a class="navbar__link" href="#">Kontakty</a></li>
           </ul>
         </nav>
-        <div>
-          <a class="contact" href="mailto:info@devstudio.com">
-            <svg class="contact__icon" width="16" height="12" viewBox="0 0 16 12">
-              <use href="images/icons.svg#icon-envelope"></use>
-            </svg>
-            info@devstudio.com</a
-          >
-        </div>
-        <div>
-          <a class="contact" href="tel:+48111111111"
-            ><svg class="contact__icon" width="16" height="12" viewBox="0 0 16 12">
-              <use href="images/icons.svg#icon-smartphone"></use>
-            </svg>
-            +48 111 111 111</a
-          >
+        <div class="box__contact">
+          <div>
+            <a class="contact" href="mailto:info@devstudio.com">
+              <svg class="contact__icon" width="16" height="12" viewBox="0 0 16 12">
+                <use href="images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </div>
+          <div>
+            <a class="contact" href="tel:+48111111111"
+              ><svg class="contact__icon" width="16" height="12" viewBox="0 0 16 12">
+                <use href="images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +48 111 111 111</a
+            >
+          </div>
         </div>
       </div>
     </header>
