--- a/index.html
+++ b/index.html
@@ -28,6 +28,43 @@
           ><a href="index.html">Web<span class="logo__header--second-word">Studio</span></a></span
         >
         <nav>
+          <div class="container__navbar--mobile">
+            <button type="button" class="menu-toggle js-open-menu"><svg class="icon-menu" width="48" height="32" viewBox="0 0 48 32">
+              <use
+                href="images/icons.svg#icon-menu"
+                width="48"
+                height="32"
+              ></use>
+            </svg></button>
+            <div class="menu-container js-menu-container">
+              <ul class="list__navbar--mobile">
+                <button type="button" class="js-close-menu menu-toggle">
+                  <svg class="modal-close-icon" width="18" height="18" viewBox="0 0 18 18">
+                    <use
+                      href="images/icons.svg#icon-close-black-18dp-2-1"
+                      width="18"
+                      height="18"
+                    ></use>
+                  </svg>
+                </button>
+                <li>
+                  <a class="navbar__link" href="./index.html">Agencja</a>
+                </li>
+                <li><a class="navbar__link" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="navbar__link" href="#">Kontakty</a></li>
+              </ul>
+              <br>
+              <div>
+                <a class="contact contact__mobile--phone" href="tel:+48111111111">
+                  +48 111 111 111</a
+                > </br>
+                <a class="contact contact__mobile--mail" href="mailto:info@devstudio.com">
+                  info@devstudio.com</a
+                >
+                <a class="menu-container__link menu-container__link--no-border " href="/"> Instagram</a><a class="menu-container__link" href="/">Twitter</a><a class="menu-container__link" href="/">Facebook</a><a class="menu-container__link" href="/">LinkedIn</a>
+              </div>
+            </div>
+          </div>
           <ul class="navbar">
             <li><a class="navbar__link navbar__link--active" href="./index.html">Agencja</a></li>
             <li><a class="navbar__link" href="./portfolio.html">Portfolio</a></li>
@@ -60,7 +97,7 @@
         <button data-modal-open class="button" type="button">Zamów usługę</button>
       </div>
       <div class="container">
-        <ul class="list__icons--big list__wrap">
+        <ul class="list__wrap list__icons--big ">
           <li>
             <svg class="icon--big" width="270" height="120" viewBox="-100 -25 270 120 ">
               <use href="images/icons.svg#icon-antenna-1-1" width="70" height="70"></use>
@@ -143,7 +180,7 @@
           <ul class="list__wrap">
             <li>
               <figure class="photo-card">
-                <img src="images/part2photo1.jpg" alt="The man with glasses" width="100%" />
+                <img src="images/part2photo1.jpg" alt="The man with glasses"  width="100%"/>
                 <figcaption>
                   <span><b>John Doe</b></span>
                   <span class="photo-card__description">Product Designer</span>
@@ -403,7 +440,7 @@
       </section>
       <div class="container">
         <h2 class="container__title .title--padding-top">Nasi klienci</h2>
-        <ul class="list__wrap list__companies">
+        <ul class="list__wrap list__companies ">
           <li>
             <a href="/">
               <svg class="icon-company" width="170" height="92" viewBox="0 0 170 92">
@@ -536,12 +573,12 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <p>Zostaw swoje dane w formularzu poniżej</p>
         <button type="button" class="data-modal-close" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18" viewBox="0 0 18 18">
             <use href="images/icons.svg#icon-close-black-18dp-2-1" width="18" height="18"></use>
           </svg>
         </button>
-        <p>Zostaw swoje dane w formularzu poniżej</p>
         <form>
           <label>
             <span class="modal__input-name">Imię</span>
@@ -588,5 +625,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
