add first picture

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
     </header>
     <main>
       <div class="box__background-photo--big">
+        <!--<picture>
+          <source srcset="images/Header-1600x800@2x.jpg 1600w, images/Header-800x400.jpg 800w" media="(min-width: 1201px)" sizes="(min-1200px: 1600px) 1600px, 100vw">
+          <source srcset="images/Header-mobile-960x800@2x.jpg 960w, images/Header-mobile-480x400.jpg 480w" media="(max-width: 1200px)" sizes="(min-1200px: 768px) 768px, 100vw">
+
+          <img src="images/Header-800x400.jpg" alt="People working in the office">
+        </picture>-->
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
         <button data-modal-open class="button" type="button">Zamów usługę</button>
       </div>
