--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@
       </div>
     </header>
     <main>
-      <div class="box__background-photo--big">
-        <!--<picture>
-          <source srcset="images/Header-1600x800@2x.jpg 1600w, images/Header-800x400.jpg 800w" media="(min-width: 1201px)" sizes="(min-1200px: 1600px) 1600px, 100vw">
-          <source srcset="images/Header-mobile-960x800@2x.jpg 960w, images/Header-mobile-480x400.jpg 480w" media="(max-width: 1200px)" sizes="(min-1200px: 768px) 768px, 100vw">
+      <div>
+        <picture class="box__background-photo--big">
+          <source srcset="images/Header-1600x800@2x.jpg 1600w, images/Header-800x400.jpg 800w" media="(min-width: 1201px)" sizes="1600px" >
+          <source srcset="images/Header-1600x800@2x.jpg 1600w, images/Header-800x400.jpg 800w" media="(min-width: 768px) and (max-width: 1200px)" sizes="100%"> 
+          <source srcset="images/Header-mobile-960x800@2x.jpg 960w, images/Header-mobile-480x400.jpg 480w" media="(max-width: 768px)" sizes="(100vw)">
 
           <img src="images/Header-800x400.jpg" alt="People working in the office">
-        </picture>-->
+        </picture>
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
         <button data-modal-open class="button" type="button">Zamów usługę</button>
       </div>
@@ -446,7 +447,7 @@
       </section>
       <div class="container">
         <h2 class="container__title .title--padding-top">Nasi klienci</h2>
-        <ul class="list__wrap list__companies ">
+        <ul class="list__wrap list__companies">
           <li>
             <a href="/">
               <svg class="icon-company" width="170" height="92" viewBox="0 0 170 92">
