--- a/index.html
+++ b/index.html
@@ -457,10 +457,10 @@
       </section>
       <div class="container">
         <h2 class="container__title .title--padding-top">Nasi klienci</h2>
-        <ul class="list__wrap list__companies">
+        <ul class="list__companies list__wrap ">
           <li>
             <a href="/">
-              <svg class="icon-company" width="170" height="92" viewBox="0 0 170 92">
+              <svg class="icon-company">
                 <use href="images/icons.svg#icon-Logo-6"></use>
               </svg>
             </a>
