change icon size

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <ul class="list__companies list__wrap ">
           <li>
             <a href="/">
-              <svg class="icon-company">
+              <svg class="icon-company" width="170" height="92" viewBox="0 0 170 92">
                 <use href="images/icons.svg#icon-Logo-6"></use>
               </svg>
             </a>
