--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
         <button data-modal-open class="button" type="button">Zamów usługę</button>
       </div>
-      <div class="container">
+      <div class="container container--no-margin">
         <ul class="list__wrap list__icons--big ">
           <li>
             <svg class="icon--big" width="270" height="120" viewBox="-100 -25 270 120 ">
